--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,12 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>DSMS</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	id="WebApp_ID" version="3.1">
+	<display-name>DSMS</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+
+	<display-name>Driving school management</display-name>
+	<servlet>
+		<servlet-name>LearnerRegister</servlet-name>
+		<servlet-class>com.dsms.servlet.LearnerRegister</servlet-class>
+		<!-- <jsp-file>/register.jsp</jsp-file> -->
+	</servlet>
+	<servlet>
+		<servlet-name>LearnerLogin</servlet-name>
+		<servlet-class>com.dsms.servlet.LoginServlet</servlet-class>
+	</servlet>
+
+	<servlet>
+		<description>Login Servlet </description>
+		<display-name>System Login</display-name>
+		<servlet-name>loginServlet</servlet-name>
+		<servlet-class>com.dsms.servlet.LoginServlet</servlet-class>
+	</servlet>
+	<!-- 
+	<servlet-mapping>
+		<servlet-name>LeanerRegister</servlet-name>
+		<url-pattern>/LeanerRegister</url-pattern>
+	</servlet-mapping> -->
+	<servlet-mapping>
+		<servlet-name>LearnerLogin</servlet-name>
+		<url-pattern>/LearnerRegister</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>loginServlet</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
 </web-app>
