Changes to web.xml and moving hte jars to web-inf

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 		<url-pattern>/LeanerRegister</url-pattern>
 	</servlet-mapping> -->
 	<servlet-mapping>
-		<servlet-name>LearnerLogin</servlet-name>
+		<servlet-name>LearnerRegister</servlet-name>
 		<url-pattern>/LearnerRegister</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
