--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
@@ -171,5 +172,16 @@
 		<url-pattern>/getLearnerCourse</url-pattern>
 	</servlet-mapping>
 	
+	   <servlet>
+    <description></description>
+    <display-name>InstructorFeedback</display-name>
+    <servlet-name>Feedback</servlet-name>
+    <servlet-class>com.dsms.servlet.Feedback</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Feedback</servlet-name>
+    <url-pattern>/Feedback</url-pattern>
+  </servlet-mapping>
+  </web-app>
+	
 
-</web-app>
